# realHTML4NaturalCore

./: .gitignore  Makefile  Makefile.in  README.md  config.guess  config.sub  configure  configure.in
include/: rh4n.h
libs/rh4n_jsongenerator/include/: rh4n_json.h
libs/rh4n_jsongenerator/src/: rh4n_json_array.c  rh4n_json_generator.c
libs/rh4n_jsongenerator/tests/: null.c
libs/rh4n_logging/include/: rh4n_logging.h
libs/rh4n_logging/src/: rh4n_logging.c
libs/rh4n_logging/tests/: staticRule.c  streamingRule.c
libs/rh4n_messaging/include/: rh4n_messaging.h
libs/rh4n_messaging/src/: rh4n_messaging.c  rh4n_messaging_recvvars.c  rh4n_messaging_sendvars.c  rh4n_messaging_sessionInformations.c  rh4n_messaging_textBlock.c  rh4n_messaging_uds.c
libs/rh4n_messaging/tests/: client.c  exec.c  server.c  testvars
libs/rh4n_utils/include/: rh4n_utils.h  rh4n_utils_namestack.h
libs/rh4n_utils/src/: rh4n_utils.c  rh4n_utils_namestack.c  rh4n_utils_prop.c
libs/rh4n_utils/tests/: nameStack_test.c
libs/rh4n_var2name/src/: rh4n_v2n_resolvenames.c
libs/rh4n_vars/include/: rh4n_vars.h  rh4n_vars_print.h
libs/rh4n_vars/src/: rh4n_vars.c  rh4n_vars_array.c  rh4n_vars_bool.c  rh4n_vars_dump.c  rh4n_vars_float.c  rh4n_vars_free.c  rh4n_vars_group.c  rh4n_vars_integer.c  rh4n_vars_load.c  (+5 more)
natcaller/include/: rh4n_natcaller.h
natcaller/src/: rh4n_natcaller_errorhandling.c  rh4n_natcaller_main.c  rh4n_natcaller_natural.c  rh4n_natcaller_parmgeneration.c  rh4n_natcaller_process.c
natuser/src/: rh4n_nat_genjson.c  rh4n_nat_jumptab.c  rh4n_nat_mbn.c  rh4n_nat_sleep.c
(+2 files in other folders)
